Tambah nama kepala lembaga, pangkat kepala lembaga, nip kepala lembaga di service lembaga
