# docs/swagger.json
@@ -5119,14 +5119,26 @@
         "web.LembagaCreateRequest": {
             "type": "object",
             "required": [
+                "jabatan_kepala_lembaga",
                 "kode_lembaga",
-                "nama_lembaga"
+                "nama_kepala_lembaga",
+                "nama_lembaga",
+                "nip_kepala_lembaga"
             ],
             "properties": {
+                "jabatan_kepala_lembaga": {
+                    "type": "string"
+                },
                 "kode_lembaga": {
                     "type": "string"
                 },
+                "nama_kepala_lembaga": {
+                    "type": "string"
+                },
                 "nama_lembaga": {
+                    "type": "string"
+                },
+                "nip_kepala_lembaga": {
                     "type": "string"
                 }
             }
@@ -5137,10 +5149,19 @@
                 "id": {
                     "type": "integer"
                 },
+                "jabatan_kepala_lembaga": {
+                    "type": "string"
+                },
                 "kode_lembaga": {
                     "type": "string"
                 },
+                "nama_kepala_lembaga": {
+                    "type": "string"
+                },
                 "nama_lembaga": {
+                    "type": "string"
+                },
+                "nip_kepala_lembaga": {
                     "type": "string"
                 }
             }
@@ -5149,17 +5170,29 @@
             "type": "object",
             "required": [
                 "id",
+                "jabatan_kepala_lembaga",
                 "kode_lembaga",
-                "nama_lembaga"
+                "nama_kepala_lembaga",
+                "nama_lembaga",
+                "nip_kepala_lembaga"
             ],
             "properties": {
                 "id": {
                     "type": "integer"
                 },
+                "jabatan_kepala_lembaga": {
+                    "type": "string"
+                },
                 "kode_lembaga": {
                     "type": "string"
                 },
+                "nama_kepala_lembaga": {
+                    "type": "string"
+                },
                 "nama_lembaga": {
+                    "type": "string"
+                },
+                "nip_kepala_lembaga": {
                     "type": "string"
                 }
             }
