# model/domain/lembaga.go
@@ -1,7 +1,10 @@
 package domain
 
 type Lembaga struct {
-	Id          int
-	KodeLembaga string
-	NamaLembaga string
+	Id                   int
+	KodeLembaga          string
+	NamaLembaga          string
+	JabatanKepalaLembaga string
+	NamaKepalaLembaga    string
+	NipKepalaLembaga     string
 }
